@@ -506,7 +506,7 @@ div:focus {
 }
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-<script src="code-review.js?version=45"></script>
+<script src="code-review.js?version=46"></script>
 </head>
 EOF
 
